@@ -12,7 +12,7 @@ PACKAGE_NAME='ImageMagick'
 # PACKAGE_NAME (e.g. "1.0.0").
 PACKAGE_VERSION='6.5.5'
 PACKAGE_LIB_VERSION="0x655"
-PACKAGE_RELEASE="9"
+PACKAGE_RELEASE="10"
 PACKAGE_LIB_VERSION_NUMBER="6,5,5,${PACKAGE_RELEASE}"
 PACKAGE_RELEASE_DATE=`date +%F`
 PACKAGE_STRING="$PACKAGE_NAME $PACKAGE_VERSION"
